test/asm/empty-strings.asm
SECTION "test", ROM0
db ""
dw ""
dl ""
assert ("") == 0
assert SIZEOF("test") == 0
